--- a/index.html
+++ b/index.html
@@ -2,109 +2,15 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
+  <title>أفضل خدمة IPTV في المغرب - timeIPTV</title>
+  <meta name="description" content="احصل على أفضل خدمة IPTV لمشاهدة القنوات في المغرب بجودة عالية وأسعار مناسبة. شاهد الباقات المحلية والدولية بسهولة.">
+  <meta name="keywords" content="IPTV, المغرب, قنوات, مشاهدة, باقات, تلفزيون, رياضة, أفلام">
+  <link rel="icon" href="favicon.png" type="image/png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>timeIPTV - أفضل خدمة IPTV في المغرب</title>
-  <link rel="icon" type="image/png" href="favicon.png">
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
-  <style>
-    body { font-family: 'Cairo', system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; }
-  </style>
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="sitemap.xml">
 </head>
-<body class="bg-gray-100 font-[Cairo]">
-
-<!-- Header -->
-<header class="bg-purple-800 text-white shadow-lg">
-  <div class="container mx-auto flex justify-between items-center p-4">
-    <h1 class="text-2xl font-bold">timeIPTV</h1>
-    <div class="flex items-center gap-4">
-      <button class="bg-white text-purple-800 px-3 py-1 rounded-full font-semibold">العربية</button>
-      <button class="bg-white text-purple-800 px-3 py-1 rounded-full font-semibold">English</button>
-      <a href="https://wa.me/212632689250" target="_blank" class="bg-green-500 px-3 py-2 rounded-full text-white font-semibold">واتساب</a>
-    </div>
-  </div>
-</header>
-
-<!-- Hero Section -->
-<section class="bg-purple-700 text-white py-16 text-center">
-  <div class="container mx-auto px-4">
-    <h2 class="text-4xl md:text-5xl font-bold mb-6">أفضل خدمة IPTV في المغرب</h2>
-    <p class="mb-6 text-xl md:text-2xl">استمتع بأكثر من 10,000 قناة وأحدث الأفلام والمسلسلات بجودة عالية</p>
-    <p class="mb-8 text-2xl font-bold">اشترك سنويًا فقط <span class="text-yellow-400">250 درهم</span></p>
-    <div class="flex justify-center gap-4 flex-wrap">
-      <a href="https://wa.me/212632689250?text=مرحبا%20أريد%20الاشتراك%20في%20timeIPTV" target="_blank" class="bg-yellow-400 text-purple-800 px-8 py-4 rounded-xl font-semibold shadow-lg text-lg">اشترك الآن</a>
-      <a href="https://wa.me/212632689250?text=مرحبا%20أريد%20تجربة%20timeIPTV%20مجانية%20لمدة%2024%20ساعة" target="_blank" class="bg-white text-purple-800 px-8 py-4 rounded-xl font-semibold shadow-lg text-lg">جرّب مجانًا 24 ساعة</a>
-    </div>
-    <img src="https://via.placeholder.com/1200x400/6b21a8/ffffff?text=IPTV+Hero+Image" alt="IPTV Hero" class="mx-auto mt-10 rounded-xl shadow-lg" loading="lazy">
-  </div>
-</section>
-
-<!-- Plans Section -->
-<section id="plans" class="py-12 container mx-auto px-4">
-  <h3 class="text-3xl text-center font-bold text-purple-800 mb-10">اختر الباقة المناسبة لك</h3>
-  <div class="grid md:grid-cols-2 gap-8">
-    <div class="bg-white p-6 rounded-2xl shadow-lg text-center">
-      <h4 class="text-xl font-bold text-purple-800 mb-2">اشتراك سنوي</h4>
-      <p class="text-3xl font-bold text-yellow-500 mb-4">250 درهم</p>
-      <ul class="text-gray-700 mb-6 space-y-2">
-        <li>✔ أكثر من 10,000 قناة</li>
-        <li>✔ أفلام ومسلسلات محدثة</li>
-        <li>✔ قنوات رياضية مميزة</li>
-        <li>✔ دعم فني عبر واتساب</li>
-      </ul>
-      <a href="https://wa.me/212632689250?text=مرحبا%20أريد%20الاشتراك%20في%20timeIPTV" target="_blank" class="block bg-purple-800 text-white py-2 rounded-xl font-semibold">اشترك الآن عبر واتساب</a>
-    </div>
-    <div class="bg-white p-6 rounded-2xl shadow-lg text-center">
-      <h4 class="text-xl font-bold text-purple-800 mb-2">تجربة مجانية</h4>
-      <p class="text-3xl font-bold text-green-500 mb-4">24 ساعة</p>
-      <ul class="text-gray-700 mb-6 space-y-2">
-        <li>✔ نفس مزايا الاشتراك الكامل</li>
-        <li>✔ بدون التزام بالدفع</li>
-      </ul>
-      <a href="https://wa.me/212632689250?text=مرحبا%20أريد%20تجربة%20timeIPTV%20مجانية%20لمدة%2024%20ساعة" target="_blank" class="block bg-green-500 text-white py-2 rounded-xl font-semibold">جرّب الآن عبر واتساب</a>
-    </div>
-  </div>
-</section>
-
-<!-- IPTV Packages Slider -->
-<section id="gallery" class="py-12 bg-gray-50">
-  <div class="container mx-auto px-4">
-    <h3 class="text-3xl text-center font-bold text-purple-800 mb-10">باقات القنوات</h3>
-    <div class="swiper mySwiper">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide flex justify-center"><img src="https://upload.wikimedia.org/wikipedia/commons/f/fc/BeIN_Sports_logo.png" alt="BeIN Sports" class="w-32 h-20 object-contain"></div>
-        <div class="swiper-slide flex justify-center"><img src="https://upload.wikimedia.org/wikipedia/commons/d/d1/OSN_logo.png" alt="OSN" class="w-32 h-20 object-contain"></div>
-        <div class="swiper-slide flex justify-center"><img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Netflix_2015_logo.svg" alt="Netflix" class="w-32 h-20 object-contain"></div>
-        <div class="swiper-slide flex justify-center"><img src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Disney%2B_logo.svg" alt="Disney+" class="w-32 h-20 object-contain"></div>
-        <div class="swiper-slide flex justify-center"><img src="https://upload.wikimedia.org/wikipedia/commons/7/7a/Canal%2B_logo.svg" alt="Canal+" class="w-32 h-20 object-contain"></div>
-        <div class="swiper-slide flex justify-center"><img src="https://upload.wikimedia.org/wikipedia/commons/3/3e/HBO_logo.svg" alt="HBO" class="w-32 h-20 object-contain"></div>
-        <div class="swiper-slide flex justify-center"><img src="https://upload.wikimedia.org/wikipedia/commons/f/fc/National_Geographic_Channel_logo.svg" alt="National Geographic" class="w-32 h-20 object-contain"></div>
-        <div class="swiper-slide flex justify-center"><img src="https://upload.wikimedia.org/wikipedia/commons/b/b9/Sky_logo_2020.svg" alt="Sky" class="w-32 h-20 object-contain"></div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- Floating WhatsApp Button -->
-<a href="https://wa.me/212632689250" target="_blank" class="fixed bottom-4 right-4 bg-green-500 text-white p-4 rounded-full shadow-lg text-lg font-bold">💬</a>
-
-<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-<script>
-  const swiper = new Swiper('.mySwiper', {
-    slidesPerView: 3,
-    spaceBetween: 20,
-    loop: true,
-    autoplay: {
-      delay: 2000,
-      disableOnInteraction: false,
-    },
-    breakpoints: {
-      640: { slidesPerView: 4 },
-      1024: { slidesPerView: 5 }
-    }
-  });
-</script>
-
+<body>
+  <h1>مرحبا بكم في timeIPTV</h1>
+  <p>أفضل خدمة لمشاهدة القنوات في المغرب بجودة عالية وسهولة الوصول.</p>
 </body>
 </html>
