--- a/index.html
+++ b/index.html
@@ -37,5 +37,8 @@
 
   <p>للتجربة المجانية لمدة 24 ساعة، تواصل معنا على الواتساب:</p>
   <p><strong>+212 632-689250</strong></p>
+  
+  <!-- السعر الجديد -->
+  <p>السعر: <strong>300 درهم</strong></p>
 </body>
 </html>
