--- a/timeiptv.html
+++ b/timeiptv.html
@@ -2,15 +2,43 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>الباقات والخدمات - timeIPTV</title>
-  <meta name="description" content="اكتشف باقاتنا المختلفة لمشاهدة القنوات المحلية والدولية بجودة عالية وأسعار مناسبة.">
-  <meta name="keywords" content="IPTV, المغرب, قنوات, باقات, مشاهدة, رياضة, أفلام, ترفيه">
+  <title>أفضل خدمة IPTV في المغرب - timeIPTV</title>
+  <meta name="description" content="احصل على أفضل خدمة لمشاهدة القنوات في المغرب بجودة عالية وأسعار مناسبة.">
+  <meta name="keywords" content="قنوات, المغرب, تلفزيون, رياضة, أفلام, timeIPTV">
   <link rel="icon" href="favicon.png" type="image/png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="sitemap" type="application/xml" title="Sitemap" href="sitemap.xml">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background: #f8f8f8;
+      margin: 0;
+      padding: 0;
+    }
+    .welcome-image {
+      max-width: 90%;
+      height: auto;
+      margin-top: 20px;
+      border-radius: 15px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    }
+    h1 {
+      color: #4B0082;
+    }
+  </style>
 </head>
 <body>
-  <h1>الباقات والخدمات</h1>
-  <p>اختر الباقة التي تناسبك وتمتع بمشاهدة القنوات المفضلة لديك.</p>
+  <h1>مرحبًا بكم في timeIPTV 🌟</h1>
+  <p>أفضل خدمة لمشاهدة القنوات والباقات بجودة عالية وسهولة في الاستخدام.</p>
+
+  <!-- الصورة الترحيبية -->
+  <img src="welcome.png" alt="timeIPTV" class="welcome-image">
+
+  <p>للتجربة المجانية لمدة 24 ساعة، تواصل معنا على الواتساب:</p>
+  <p><strong>+212 632-689250</strong></p>
+  
+  <!-- السعر الجديد -->
+  <p>السعر: <strong>300 درهم</strong></p>
 </body>
 </html>
