--- a/index.html
+++ b/index.html
@@ -2,43 +2,60 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>أفضل خدمة IPTV في المغرب - timeIPTV</title>
-  <meta name="description" content="احصل على أفضل خدمة لمشاهدة القنوات في المغرب بجودة عالية وأسعار مناسبة.">
-  <meta name="keywords" content="قنوات, المغرب, تلفزيون, رياضة, أفلام, timeIPTV">
-  <link rel="icon" href="favicon.png" type="image/png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="sitemap" type="application/xml" title="Sitemap" href="sitemap.xml">
+  <title>timeIPTV - أفضل خدمة IPTV في المغرب</title>
+  <meta name="description" content="timeIPTV تقدم أفضل خدمة مشاهدة القنوات العالمية والمحلية بجودة عالية وسعر مناسب. جرب الآن واستمتع بمحتوى متنوع على مدار الساعة.">
+  <link rel="icon" type="image/png" href="favicon.png">
   <style>
     body {
       font-family: Arial, sans-serif;
-      text-align: center;
-      background: #f8f8f8;
+      background-color: #f5f5f5;
       margin: 0;
       padding: 0;
     }
-    .welcome-image {
-      max-width: 90%;
-      height: auto;
-      margin-top: 20px;
-      border-radius: 15px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    header {
+      background-color: #1a73e8;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+    main {
+      max-width: 900px;
+      margin: 30px auto;
+      padding: 20px;
+      background-color: white;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      border-radius: 8px;
     }
     h1 {
-      color: #4B0082;
+      color: #1a73e8;
+    }
+    p {
+      line-height: 1.6;
+    }
+    footer {
+      text-align: center;
+      padding: 15px;
+      color: #555;
     }
   </style>
 </head>
 <body>
-  <h1>مرحبًا بكم في timeIPTV 🌟</h1>
-  <p>أفضل خدمة لمشاهدة القنوات والباقات بجودة عالية وسهولة في الاستخدام.</p>
-
-  <!-- الصورة الترحيبية -->
-  <img src="welcome.png" alt="timeIPTV" class="welcome-image">
-
-  <p>للتجربة المجانية لمدة 24 ساعة، تواصل معنا على الواتساب:</p>
-  <p><strong>+212 632-689250</strong></p>
-  
-  <!-- السعر الجديد -->
-  <p>السعر: <strong>300 درهم</strong></p>
+  <header>
+    <h1>مرحبا بكم في timeIPTV</h1>
+  </header>
+  <main>
+    <h2>أفضل خدمة IPTV في المغرب</h2>
+    <p>مع timeIPTV، استمتع بمشاهدة القنوات العالمية والمحلية بجودة عالية وسعر مناسب. نوفر لك تجربة مشاهدة متكاملة على جميع الأجهزة مع تحديث دائم للباقات والمحتوى.</p>
+    <p>ابدأ الآن وتمتع بعروض حصرية وخدمة عملاء سريعة لدعمك في أي وقت.</p>
+    <a href="https://watiptv.com/contact" style="display:inline-block; margin-top:15px; padding:10px 20px; background-color:#1a73e8; color:white; text-decoration:none; border-radius:5px;">تواصل معنا</a>
+  </main>
+  <footer>
+    &copy; 2025 timeIPTV. جميع الحقوق محفوظة.
+  </footer>
 </body>
 </html>
+
+</body>
+</html>
+
