--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>timeIPTV - أفضل خدمة IPTV في المغرب</title>
-  <meta name="description" content="timeIPTV تقدم أفضل خدمة مشاهدة القنوات العالمية والمحلية بجودة عالية وسعر مناسب. جرب الآن واستمتع بمحتوى متنوع على مدار الساعة.">
+  
+  <title>WATIPTV - أفضل خدمة بث مباشر في المغرب</title>
+  <meta name="description" content="WATIPTV تقدم لك أفضل خدمة لمشاهدة القنوات العالمية والعربية بجودة عالية وسعر مناسب. جرب الآن وتمتع بمحتوى متنوع على مدار الساعة.">
+  <meta name="keywords" content="watiptv, قنوات, بث مباشر, أفلام, مسلسلات, رياضة, المغرب, IPTV">
+  
   <link rel="icon" type="image/png" href="favicon.png">
+
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -33,6 +37,15 @@
     p {
       line-height: 1.6;
     }
+    a.btn {
+      display: inline-block;
+      margin-top: 15px;
+      padding: 10px 20px;
+      background-color: #1a73e8;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+    }
     footer {
       text-align: center;
       padding: 15px;
@@ -42,20 +55,16 @@
 </head>
 <body>
   <header>
-    <h1>مرحبا بكم في timeIPTV</h1>
+    <h1>مرحبا بكم في WATIPTV</h1>
   </header>
   <main>
-    <h2>أفضل خدمة IPTV في المغرب</h2>
-    <p>مع timeIPTV، استمتع بمشاهدة القنوات العالمية والمحلية بجودة عالية وسعر مناسب. نوفر لك تجربة مشاهدة متكاملة على جميع الأجهزة مع تحديث دائم للباقات والمحتوى.</p>
+    <h2>أفضل خدمة بث مباشر في المغرب</h2>
+    <p>مع <strong>WATIPTV</strong>، استمتع بمشاهدة القنوات العالمية والعربية بجودة عالية وسعر مناسب. نوفر لك تجربة مشاهدة متكاملة على جميع الأجهزة مع تحديث دائم للباقات والمحتوى.</p>
     <p>ابدأ الآن وتمتع بعروض حصرية وخدمة عملاء سريعة لدعمك في أي وقت.</p>
-    <a href="https://watiptv.com/contact" style="display:inline-block; margin-top:15px; padding:10px 20px; background-color:#1a73e8; color:white; text-decoration:none; border-radius:5px;">تواصل معنا</a>
+    <a href="https://watiptv.com/contact" class="btn">تواصل معنا</a>
   </main>
   <footer>
-    &copy; 2025 timeIPTV. جميع الحقوق محفوظة.
+    &copy; 2025 WATIPTV. جميع الحقوق محفوظة.
   </footer>
 </body>
 </html>
-
-</body>
-</html>
-
