--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- العنوان والوصف -->
   <title>WATIPTV - أفضل خدمة بث مباشر في المغرب</title>
-  <meta name="description" content="WATIPTV تقدم أفضل خدمة لمشاهدة القنوات العالمية والعربية بجودة عالية وسعر مناسب. جرب الآن وتمتع بمحتوى متنوع على مدار الساعة.">
+  <meta name="description" content="WATIPTV تقدم أفضل خدمة لمشاهدة القنوات العالمية والعربية بجودة عالية وسعر مناسب. اشترك الآن وتمتع بمحتوى متنوع على مدار الساعة.">
   <meta name="keywords" content="watiptv, قنوات, بث مباشر, أفلام, مسلسلات, رياضة, المغرب, IPTV">
+
+  <!-- الرابط الأساسي (Canonical) -->
+  <link rel="canonical" href="https://watiptv.com/" />
+
+  <!-- أيقونة الموقع -->
   <link rel="icon" type="image/png" href="favicon.png">
+
+  <!-- خطوط وستايل -->
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
@@ -110,5 +119,3 @@
 
 </body>
 </html>
-<link rel="canonical" href="https://watiptv.com/" />
-
