--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- العنوان والوصف -->
-  <title>WATIPTV - أفضل خدمة بث مباشر في المغرب</title>
-  <meta name="description" content="WATIPTV تقدم أفضل خدمة لمشاهدة القنوات العالمية والعربية بجودة عالية وسعر مناسب. اشترك الآن وتمتع بمحتوى متنوع على مدار الساعة.">
-  <meta name="keywords" content="watiptv, قنوات, بث مباشر, أفلام, مسلسلات, رياضة, المغرب, IPTV">
+  <title>WATIPTV - أفضل خدمة بث مباشر مع تجربة مجانية 24 ساعة</title>
+  <meta name="description" content="اشترك الآن مع WATIPTV وتمتع بأكثر من 10,000 قناة وأحدث الأفلام والمسلسلات بجودة عالية. جرّب مجانًا لمدة 24 ساعة قبل الاشتراك السنوي.">
+  <meta name="keywords" content="watiptv, بث مباشر, قنوات, أفلام, مسلسلات, رياضة, IPTV المغرب, تجربة مجانية 24 ساعة">
 
   <!-- الرابط الأساسي (Canonical) -->
   <link rel="canonical" href="https://watiptv.com/" />
@@ -42,7 +42,7 @@
   <div class="container mx-auto px-4">
     <h2 class="text-4xl md:text-5xl font-bold mb-6">أفضل خدمة بث مباشر في المغرب</h2>
     <p class="mb-6 text-xl md:text-2xl">استمتع بأكثر من 10,000 قناة وأحدث الأفلام والمسلسلات بجودة عالية</p>
-    <p class="mb-8 text-2xl font-bold">اشترك سنويًا فقط <span class="text-yellow-400">250 درهم</span></p>
+    <p class="mb-8 text-2xl font-bold">اشترك سنويًا فقط <span class="text-yellow-400">250 درهم</span> أو جرّب مجانًا 24 ساعة</p>
     <div class="flex justify-center gap-4 flex-wrap">
       <a href="https://wa.me/212632689250?text=مرحبا%20أريد%20الاشتراك%20في%20WATIPTV" target="_blank" class="bg-yellow-400 text-purple-800 px-8 py-4 rounded-xl font-semibold shadow-lg text-lg">اشترك الآن</a>
       <a href="https://wa.me/212632689250?text=مرحبا%20أريد%20تجربة%20WATIPTV%20مجانية%20لمدة%2024%20ساعة" target="_blank" class="bg-white text-purple-800 px-8 py-4 rounded-xl font-semibold shadow-lg text-lg">جرّب مجانًا 24 ساعة</a>
