--- a/index.html
+++ b/index.html
@@ -8,31 +8,52 @@
   <meta name="keywords" content="watiptv, بث مباشر, قنوات, أفلام, مسلسلات, رياضة, IPTV المغرب, تجربة مجانية 24 ساعة">
   <link rel="canonical" href="https://watiptv.com/" />
   <link rel="icon" type="image/png" href="favicon.png">
-
-  <!-- Open Graph Meta (Facebook) -->
-  <meta property="og:title" content="WATIPTV - أفضل خدمة بث مباشر مع تجربة مجانية 24 ساعة" />
-  <meta property="og:description" content="اشترك الآن مع WATIPTV وتمتع بأكثر من 10,000 قناة وأحدث الأفلام والمسلسلات بجودة عالية. جرّب مجانًا لمدة 24 ساعة قبل الاشتراك السنوي." />
-  <meta property="og:url" content="https://watiptv.com/" />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://watiptv.com/favicon.png" />
-
-  <!-- Twitter Card Meta -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="WATIPTV - أفضل خدمة بث مباشر مع تجربة مجانية 24 ساعة" />
-  <meta name="twitter:description" content="اشترك الآن مع WATIPTV وتمتع بأكثر من 10,000 قناة وأحدث الأفلام والمسلسلات بجودة عالية. جرّب مجانًا لمدة 24 ساعة قبل الاشتراك السنوي." />
-  <meta name="twitter:image" content="https://watiptv.com/favicon.png" />
-
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
-  <style>
-    body { font-family: 'Cairo', system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; }
-  </style>
 </head>
 <body class="bg-gray-100 font-[Cairo]">
 
-<!-- محتوى الموقع الأصلي يبقى كما هو -->
-<!-- يمكنك لصق باقي الكود السابق هنا بدون أي تعديل -->
+<!-- باقي محتوى الموقع -->
+
+<!-- قسم آراء الزبناء -->
+<section id="reviews" class="py-12 bg-gray-50">
+  <div class="container mx-auto px-4">
+    <h3 class="text-3xl text-center font-bold text-purple-800 mb-10">آراء الزبناء</h3>
+    
+    <div class="grid md:grid-cols-3 gap-8">
+      <div class="bg-white p-6 rounded-2xl shadow-lg text-center">
+        <p class="text-gray-700 italic">"الخدمة ممتازة والتفعيل كان سريع."</p>
+        <h4 class="mt-4 font-bold text-purple-800">محمد - الدار البيضاء</h4>
+      </div>
+      <div class="bg-white p-6 rounded-2xl shadow-lg text-center">
+        <p class="text-gray-700 italic">"جربت 24 ساعة مجانية ومن بعد اشتركت، كلشي واضح."</p>
+        <h4 class="mt-4 font-bold text-purple-800">سارة - الرباط</h4>
+      </div>
+      <div class="bg-white p-6 rounded-2xl shadow-lg text-center">
+        <p class="text-gray-700 italic">"قنوات كثيرة والجودة عالية بزاف."</p>
+        <h4 class="mt-4 font-bold text-purple-800">يوسف - مراكش</h4>
+      </div>
+      <div class="bg-white p-6 rounded-2xl shadow-lg text-center">
+        <p class="text-gray-700 italic">"ثقة وجودة عالية، أنصح الجميع بالتجربة."</p>
+        <h4 class="mt-4 font-bold text-purple-800">أمينة - فاس</h4>
+      </div>
+      <div class="bg-white p-6 rounded-2xl shadow-lg text-center">
+        <p class="text-gray-700 italic">"أفضل خدمة IPTV جربتها، قنوات رياضية وأفلام بجودة ممتازة."</p>
+        <h4 class="mt-4 font-bold text-purple-800">كريم - طنجة</h4>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Footer -->
+<footer class="bg-purple-800 text-white py-6 mt-12">
+  <div class="container mx-auto px-4 flex flex-col md:flex-row items-center justify-between gap-4">
+    <p class="text-center md:text-left">© 2025 WATIPTV - جميع الحقوق محفوظة</p>
+    <a href="https://wa.me/212632689250" target="_blank" class="bg-green-500 px-4 py-2 rounded-xl font-semibold shadow-lg">
+      💬 تواصل معنا عبر واتساب
+    </a>
+  </div>
+</footer>
 
 </body>
 </html>
